[gd_scene load_steps=3 format=3 uid="uid://c76kpch6mphjp"]

[ext_resource type="Script" uid="uid://bbqqjeossexnp" path="res://scripts/ui/inventory_slot.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://b66w7byvbubdj" path="res://assets/hub/casilla.png" id="2_slot"]

[node name="InventorySlot" type="Control"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 3
anchors_preset = 0
offset_right = 50.0
offset_bottom = 50.0
script = ExtResource("1_script")

[node name="SlotBackground" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_slot")
expand_mode = 1
stretch_mode = 5

[node name="ItemIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 19.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="ItemName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -12.0
offset_right = 20.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 6
text = "Item"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Quantity" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -15.0
offset_bottom = 10.0
grow_horizontal = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 8
text = "x99"
horizontal_alignment = 2
